<resources>
    <string name="app_name">医疗废弃物回收系统</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_pl2303_hxdsimple_test">PL2303HXDSimpleTest  v2.0.2.21</string>
    <string name="PL2303HXD_Set_BaudRate">BaudRate</string>
    <string name="PL2303HXD_OpenCOMPort">Open</string>
    <string name="PL2303HXD_WriteData">Write</string>
    <string name="PL2303HXD_ReadData">ReadData</string>
    <string name="PL2303HXD_StartThread">Start</string>
    <string name="PL2303HXD_StopThread">Stop</string>
    <string name="PL2303HXD_LoopBack">LoopBack</string>
    <string name="PL2303HXD_SetVIDPID">Connecting New VID PID</string>
    <string name="PL2303HXD_SetDTR">SetDTR</string>
    <string name="PL2303HXD_GetSN">GetSN</string>
    <string name="title_activity_singleUart">串口</string>
    <string name="menu_title">医疗废弃物智能监控系统（推车模式）</string>
    <string name="uart_label">串口</string>
    <string name="menu_label">菜单</string>
    <string name="main_label">main</string>
    <string name="upload_label">上传</string>
    <string name="recyclecart_label">回收车</string>
    <string name="transferworkshop_label">转运中心</string>
    <string name="transfercar_label">转运车</string>
    <string name="title_activity_settings">Settings</string>

    <string name="download_ip">下载IP</string>
    <string name="download_port">下载端口</string>
    <string name="upload_ip">上传IP</string>
    <string name="upload_port">上传端口</string>

    <string name="btn_save">保存</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_navi">NaviActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
