<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".setting.SettingActivity">

    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/tiet1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/download_ip" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/tiet2"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/download_port" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/tiet3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upload_ip" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:inputType="number"
            android:id="@+id/tiet4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upload_port" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="save_config"
        android:text="@string/btn_save" />

</LinearLayout>